bugFix - styling review record component

--- a/src/app/home/components/new-record/new-record.component.html
+++ b/src/app/home/components/new-record/new-record.component.html
@@ -48,8 +48,8 @@
                 <button class="fontFamily" nbButton nbStepperPrevious>
                   قبلی
                 </button>
-                <button class="fontFamily" nbButton disabled nbStepperNext>
-                  بعدی
+                <button class="fontFamily" nbButton status="success" >
+                  ثبت رکورد
                 </button>
               </nb-step>
             </nb-stepper>
