bugFix- set stepper validator

--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -42,7 +42,7 @@
           </li>
 
           <li class="nav-item">
-              <button nbButton hero status="primary" href="#home" class="btn page-scroll" >ثبت جدید</button>
+              <a nbButton hero status="primary" href="#home" class="btn page-scroll" >ثبت جدید</a>
           </li>
 
         </ul>
