--- a/src/app/home/components/new-record/new-record.component.scss
+++ b/src/app/home/components/new-record/new-record.component.scss
@@ -2,9 +2,8 @@
 //   
 // // /// // tabs /// /// //
 
-nb-tabset .tabset{
-    font-family: iranSansM;
-    font-size: 20px;
+ .tabset .tab a{
+    font-family: iranSansM !important;
   } 
   
   ul{
