feature- add copyRight component to footer for minimizing HTML code of footer component

--- a/src/app/home/components/footer/footer.component.html
+++ b/src/app/home/components/footer/footer.component.html
@@ -1,84 +1,53 @@
+<!-- Footer Section Start -->
+<footer>
+  <!-- Footer Area Start -->
+  <section class="footer-Content">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+          <img src="img/logo.png" alt="">
+          <div class="textwidget">
+            <p>Appropriately implement one-to-one catalysts for change vis-a-vis wireless catalysts for change.
+              Enthusiastically architect adaptive.</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+          <div class="widget">
+            <h3 class="block-title">به ما بپیوندید</h3>
+            <ul class="menu">
+              <li><a href="#">ورود</a></li>
+              <li><a href="#">ثبت نام</a></li>
 
-  <!-- Footer Section Start -->
-  <footer>
-      <!-- Footer Area Start -->
-      <section class="footer-Content">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-              <img src="img/logo.png" alt="">
-              <div class="textwidget">
-                <p>Appropriately implement one-to-one catalysts for change vis-a-vis wireless catalysts for change.
-                  Enthusiastically architect adaptive.</p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-              <div class="widget">
-                <h3 class="block-title">به ما بپیوندید</h3>
-                <ul class="menu">
-                  <li><a href="#">ورود</a></li>
-                  <li><a href="#">ثبت نام</a></li>
-  
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-              <div class="widget">
-                <h3 class="block-title">منابع</h3>
-                <ul class="menu">
-                  <li><a href="#">Comunnity</a></li>
-                  <li><a href="#">از اعضای ما شوید</a></li>
-                  <li><a href="#">مستندات</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-              <div class="widget">
-                <h3 class="block-title">پشتیبانی</h3>
-                <ul class="menu">
-                  <li><a href="#">قوانین و مقررات</a></li>
-                  <li><a href="#">ارتباط با ما</a></li>
-                  <li><a href="#">سیاست ها</a></li>
-                  <li><a href="#">کمک</a></li>
-                </ul>
-              </div>
-            </div>
+            </ul>
           </div>
         </div>
-        <!-- Copyright Start  -->
-        <div class="copyright">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="site-info float-left">
-                  <p>&copy; 2020 - Designed by <a href="http://mognia.ir" rel="nofollow">Mognia</a></p>
-                </div>
-                <div class="float-right">
-                  <ul class="footer-social">
-                    <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
-                    <li><a class="twitter" href="#"><i class="lni-twitter-filled"></i></a></li>
-                    <li><a class="linkedin" href="#"><i class="lni-linkedin-fill"></i></a></li>
-                    <li><a class="google-plus" href="#"><i class="lni-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+          <div class="widget">
+            <h3 class="block-title">منابع</h3>
+            <ul class="menu">
+              <li><a href="#">Comunnity</a></li>
+              <li><a href="#">از اعضای ما شوید</a></li>
+              <li><a href="#">مستندات</a></li>
+            </ul>
           </div>
         </div>
-        <!-- Copyright End -->
-      </section>
-      <!-- Footer area End -->
-  
-    </footer>
-    <!-- Footer Section End -->
-  
-    <!-- Go To Top Link -->
-    <a href="#" class="back-to-top">
-      <i class="lni-chevron-up"></i>
-    </a>
-  
-    <!-- Preloader -->
-    <div id="preloader">
-      <div class="loader" id="loader-1"></div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
+          <div class="widget">
+            <h3 class="block-title">پشتیبانی</h3>
+            <ul class="menu">
+              <li><a href="#">قوانین و مقررات</a></li>
+              <li><a href="#">ارتباط با ما</a></li>
+              <li><a href="#">سیاست ها</a></li>
+              <li><a href="#">کمک</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- End Preloader -->
+
+    <copy-right></copy-right>
+  </section>
+  <!-- Footer area End -->
+
+</footer>
+<!-- Footer Section End -->
