Feature- add mail input login in login.component to seprate it from login component

--- a/src/app/home/components/login-mailinput/login-mailinput.component.html
+++ b/src/app/home/components/login-mailinput/login-mailinput.component.html
@@ -1,3 +1,36 @@
-<p>
-  login-mailinput works!
-</p>
+<div class="header">
+    <button mat-dialog-close type="button" class="btn btn-danger closeBtn">
+
+      <i class="fas fa-times"></i>
+    </button>
+    <p mat-dialog-title>ثبت ایمیل</p>
+  </div>
+
+  <mat-dialog-content class="mat-typography">
+    <div class="">
+      <div class="row">
+        <div class="col">
+          <img class="regLogo mx-auto" src="../../../../assets/img/team/team1.jpg" alt="">
+          <p class="title"> ثبت ایمیل
+          </p>
+          <p class="subTitle">برای دریافت نتایج ثبت اسناد خود روی بلاک چین و استفاده از آن برای فرایند استعلام ایمیل خود
+            را وارد کنید</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col phoneSection">
+
+          <form [formGroup]="mailForm">
+            <input class="codeInput" type="email" formControlName="email" nbInput status="success"
+              placeholder="ایمیل خود را وارد نمایید">
+            <div class="col">
+              <button type="submit" nbButton hero class="codeSubmitBtn" status="warning"
+                (click)="submiteCode()">ثبت</button>
+              <button nbButton outline class="codeSubmitBtn" mat-dialog-close size="small" status="info">بعدا ثبت
+                میکنم</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </mat-dialog-content>
