--- a/src/app/home/components/login-codeinput/login-codeinput.component.scss
+++ b/src/app/home/components/login-codeinput/login-codeinput.component.scss
@@ -60,3 +60,9 @@
   
       margin: 1.5rem 0 0
   }
+  .wrongCode{
+    color: red;
+    margin-top: 12px;
+    margin-bottom: 0;
+    font-size: 16px;
+  }
