--- a/src/app/home/components/new-claim/new-claim.component.html
+++ b/src/app/home/components/new-claim/new-claim.component.html
@@ -1,4 +1,4 @@
-<!-- 
+
     <nb-card>
       <nb-card-body class="cardBody">
         <nb-stepper orientation="horizontal">
@@ -42,4 +42,4 @@
           </nb-step>
         </nb-stepper>
       </nb-card-body>
-    </nb-card> -->
+    </nb-card>
