claim result added

--- a/src/app/home/components/new-claim/new-claim.component.html
+++ b/src/app/home/components/new-claim/new-claim.component.html
@@ -1,19 +1,15 @@
 
     <nb-card>
       <nb-card-body class="cardBody">
-        <nb-stepper orientation="horizontal">
-          <nb-step [label]="labelOne" [stepControl]="claimInputForm">
+        <nb-stepper orientation="horizontal" disableStepNavigation>
+          <nb-step [label]="labelOne">
             <ng-template #labelOne>ثبت محتوا</ng-template>
             <form [formGroup]="">
               <input type="text" style="display:none" class="form-control" />
             </form>
 
-            <file-uploader (fileInputChange)="
-            claimInputForm.setValue({ fileCtrl: $event?.files?.length }) ;
-              "></file-uploader>
-            <button class="fontFamily" nbButton disabled nbStepperNext>
-              قبلی
-            </button>
+            <file-uploader (fileInputChange)="onfileChange($event)"></file-uploader>
+
             <button *ngIf="hasFile" class="fontFamily" nbButton nbStepperNext type="submit">
               بعدی
             </button>
@@ -21,24 +17,17 @@
               بعدی
             </button>
           </nb-step>
-          <nb-step [label]="labelOne1" [stepControl]="">
-            <ng-template #labelOne1>گذاشتن لایسنس</ng-template>
-            <form [formGroup]="lisenceInputForm">
-              <input type="text" style="display:none" class="form-control" formControlName="fileCtrl" />
+          <nb-step [label]="labelOne1">
+            <ng-template #labelOne1>نتیجه</ng-template>
+            <form >
+              <input type="text" style="display:none" class="form-control" />
             </form>
 
-            <file-uploader (fileInputChange)="
-            lisenceInputForm.setValue({ fileCtrl: $event?.files?.length }) ;
-              "></file-uploader>
-            <button class="fontFamily" nbButton disabled nbStepperNext>
+            <calim-result ></calim-result>
+            <button class="fontFamily" nbButton nbStepperNext>
               قبلی
             </button>
-            <button *ngIf="hasFile" class="fontFamily" nbButton nbStepperNext type="submit">
-              ادعای رکورد
-            </button>
-            <button *ngIf="!hasFile" class="fontFamily" nbButton nbPopover="ابتدا یک فایل انتخاب کنید">
-              ادعای رکورد
-            </button>
+
           </nb-step>
         </nb-stepper>
       </nb-card-body>
